[package]
name = "dora_explorer"
version = "0.1.0"
authors = ["Benjamin Blundell <me@benjamin.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_distr = "*"
probability = "*"
nalgebra = "0.16.0"
image = "*"
argparse = "0.2.2"
pbr = "*"
scoped_threadpool = "*"
fitrs = "*"
tiff = "0.4.0"
glib = "0.9.1"
ndarray = "0.12.0"
#hdf5 = "0.5.2"
hdf5 = { path = "../hdf5-rust" }

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.gdk-pixbuf]
version = ""
features = ["v2_32"]